<resources>
    <string name="app_name">Maratón de palabras</string>

    <string name="txt_nombre">Nombre</string>
    <string name="txt_comenzar">¡Jugar!</string>
    <string name="txt_vacío"></string>

    <string name="jugador">BAUTISTA</string>
    <string name="Boton_borrar">Borrar</string>
    <string name="Boton_evaluar">Evaluar</string>
    <string name="silaba_inicial">ABCD</string>
    <string name="puntaje_inicial">0</string>
    <string name="respuesta_inicial">ABUELA</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="txt_Opciones">Opciones</string>
    <string name="txt_Salir">Salir</string>
    <string name="txt_musica">Música</string>
    <string name="txt_sonidos">Sonidos</string>
    <string name="txt_si">Sonido activado</string>
    <string name="txt_no">Sonido desactivado</string>
    <string name="txt_music_on">Musica encendida</string>
    <string name="txt_music_off">Musica apagada</string>
    <string name="txt_color">Color</string>
    <string name="txt_azul">Fondo Azul</string>
    <string name="txt_rojo">Fondo Rojo</string>
    <string name="txt_editar_tarjetas">Editar tarjetas</string>

    <string name="txt_proximamente">Proximamente</string>
    <string name="txt_salir">Salir</string>
    <string name="erase">borrar</string>
    <string name="send">Enviar</string>
    <string name="mode_capslock_on">Modo: Mayúsculas</string>
    <string name="mode_capslock_off">Modo: Minúsculas</string>

    <string name="final_message_1">¡Buen comienzo!</string>
    <string name="final_message_2">¡Bien!</string>
    <string name="final_message_3">¡Muy bien!</string>
    <string name="final_message_4">¡Estas avanzado mucho!</string>
    <string name="final_message_5">¡Brillante!</string>
    <string name="final_message_6">¡Qué orgullo cómo lees!</string>
    <string name="final_message_7">¡wooow!¡Increíble!</string>
    <string name="final_message_8">¡¡¡Excelente!!!</string>
    <string name="final_message_9">¡¡¡Espectacular!!!</string>
    <string name="final_message_10">¡Puntuación PERFECTA!</string>

    <string name="txt_borrar">borrar</string>
    <string name="txt_enviar_respuesta">enviar respuesta</string>
    <string name="txt_go_home">pantalla de inicio</string>
    <string name="lives_left">vidas restantes</string>
    <string name="main_image">Imagen principal</string>
    <string name="score">Puntaje:</string>
    <string name="sound">Sonido</string>
    <string name="music">Música</string>
    <string name="random_capslock">AbCAbc</string>
    <string name="first_mayu_then_minu">ABCabc</string>
    <string name="abc_mayusculas">ABC</string>
    <string name="abc_minusculas">abc</string>
    <string name="initial_capslock_mode">Modo: mayúsculas + minúsculas</string>
    <string name="close">cerrar</string>
    <string name="play_again">jugar de nuevo</string>
    <string name="level_name">Level name</string>
    <string name="expand">expand</string>
    <string name="add_card">add card</string>
    <string name="elefante">Elefante</string>
    <string name="correct_syllables">Sílabas Correctas:</string>
    <string name="_1">1</string>
    <string name="syl_1">silaba 1</string>
    <string name="empty_string" />
    <string name="syl_2">sílaba 2</string>
    <string name="syl_3">sílaba 3</string>
    <string name="syl_4">sílaba 4</string>
    <string name="level_txt">Level:</string>
    <string name="word_image">word image</string>
    <string name="edit">Editar</string>
    <string name="_00">00</string>
</resources>