<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/light_grey">

        <TextView
            android:id="@+id/tv_editable_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/elefante"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dropdown_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_drop_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/expand" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandableCardLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/left_column_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_syllables"/>

            <GridLayout
                android:id="@+id/syllables_gridlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2">


                <EditText
                    android:id="@+id/et_syl1"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/syl_1" />


                <EditText
                    android:id="@+id/et_syl2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/syl_2" />


                <EditText
                    android:id="@+id/et_syl3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/syl_3" />


                <EditText
                    android:id="@+id/et_syl4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/syl_4" />


            </GridLayout>


            <LinearLayout
                android:id="@+id/level_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_txt"/>

                <TextView
                    android:id="@+id/tv_card_level"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/right_column_layout"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <ImageView
                android:id="@+id/iv_word_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/word_image" />

            <Button
                android:id="@+id/bt_edit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_word_image" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>