<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/id_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"/>

    <Button
        android:id="@+id/bt_jugar"
        android:layout_width="201dp"
        android:layout_height="114dp"
        android:background="@drawable/silaba_presionada"
        android:text="@string/txt_comenzar"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="286dp" />

    <Button
        android:id="@+id/bt_opciones"
        android:layout_width="196dp"
        android:layout_height="78dp"
        android:layout_marginTop="88dp"
        android:text="@string/title_activity_opciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_jugar" />

</androidx.constraintlayout.widget.ConstraintLayout>