<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.HomeActivity">


    <ImageView
        android:id="@+id/id_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/bt_jugar"
        android:layout_width="201dp"
        android:layout_height="114dp"
        android:background="@drawable/boton_jugar"
        android:contentDescription="@string/txt_comenzar"
        android:textAllCaps="false"
        android:textColor="@color/light_blue"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/id_fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />


    <Button
        android:id="@+id/bt_opciones"
        android:layout_width="196dp"
        android:layout_height="78dp"
        android:layout_marginTop="88dp"
        android:textSize="20sp"
        android:text="@string/title_activity_opciones"
        android:backgroundTint="@color/button_red"
        app:layout_constraintBottom_toBottomOf="@+id/id_fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_jugar"
        app:layout_constraintVertical_bias="0.0" />



    <LinearLayout
        android:id="@+id/layout_opciones_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_opciones"
>
        <LinearLayout
            android:id="@+id/layout_switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_opciones"
            app:layout_constraintVertical_bias="0.104">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_sonido_home"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:text="@string/sound"
                android:theme="@style/SCBSwitch"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_opciones" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_musica_home"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:text="@string/music"
                android:theme="@style/SCBSwitch"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_opciones" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_opciones"
            app:layout_constraintVertical_bias="0.104">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/bt_mayuminus_random"
                    android:layout_width="122dp"
                    android:layout_height="38dp"
                    android:textAllCaps="false"
                    android:text="@string/random_capslock"
                    android:background="@drawable/ic_fondo_mayusc_minusc"
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/bt_mayu_minus_in_order"
                    android:layout_width="122dp"
                    android:layout_height="38dp"
                    android:textAllCaps="false"
                    android:text="@string/first_mayu_then_minu"
                    android:background="@drawable/ic_fondo_mayusc_minusc"
                    android:textSize="18sp"
                    android:layout_margin="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/bt_mayusc"
                    android:layout_width="122dp"
                    android:layout_height="48dp"
                    android:textAllCaps="false"
                    android:text="@string/abc_mayusculas"
                    android:background="@drawable/ic_fondo_mayusc_minusc"
                    android:layout_margin="15dp"/>

                <Button
                    android:id="@+id/bt_minusc"
                    android:layout_width="122dp"
                    android:layout_height="48dp"
                    android:textAllCaps="false"
                    android:text="@string/abc_minusculas"
                    android:background="@drawable/ic_fondo_mayusc_minusc"
                    android:textSize="18sp"
                    android:layout_margin="15dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_modo_mayuminu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_capslock_mode"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_fondo" />

    <Button
        android:id="@+id/bt_edit_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="goToEditCards"
        android:text="crear card"
        app:layout_constraintEnd_toStartOf="@+id/bt_opciones"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_jugar" />

    <Button
        android:id="@+id/bt_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:onClick="ResetToDefault"
        android:text="reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_jugar" />

</androidx.constraintlayout.widget.ConstraintLayout>